Fix education spacing selectors for resume biography variants

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,11 +1,13 @@
 /* Education block: show school+year above role/degree and emphasize school line */
-.resume-biography .description {
+.resume-biography .description,
+.wg-resume-biography-3 .description {
   display: flex;
   flex-direction: column;
 }
 
 /* School + year line (institution) on top */
-.resume-biography .description .text-sm {
+.resume-biography .description .text-sm,
+.wg-resume-biography-3 .description .text-sm {
   order: 1;
   font-size: 1.05rem;
   font-weight: 600;
@@ -16,9 +18,10 @@
 }
 
 /* Role / degree line below */
-.resume-biography .description .course {
+.resume-biography .description .course,
+.wg-resume-biography-3 .description .course {
   order: 2;
-  font-size: 1.0rem;
+  font-size: 1rem;
   font-weight: 460;
   line-height: 1.35;
   margin: 0;
@@ -26,12 +29,17 @@
   white-space: pre;
 }
 
-
-/* Increase spacing between education entries */
-.resume-biography .education ul > li {
+/* Increase spacing between education entries (multiple selectors for theme variants) */
+.resume-biography .education ul > li,
+.wg-resume-biography-3 .education ul > li,
+.wg-resume-biography-3 .education li,
+.education ul > li {
   margin-bottom: 20rem !important;
 }
 
-.resume-biography .education ul > li:last-child {
+.resume-biography .education ul > li:last-child,
+.wg-resume-biography-3 .education ul > li:last-child,
+.wg-resume-biography-3 .education li:last-child,
+.education ul > li:last-child {
   margin-bottom: 0 !important;
 }
